--- a/public/test.html
+++ b/public/test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <video controls width="1080" height="720">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        <source src="/mov_bbb.mp4" type="video/mp4">
         您的浏览器不支持视频标签。
     </video>
 </body>
