--- a/test.html
+++ b/test.html
@@ -6,7 +6,8 @@
     <title>Test Video</title>
 </head>
 <body>
-    <video controls width="1080" height="720">
+
+    <video controls muted width="1080" height="720">
         <source src="/mov_bbb.mp4" type="video/mp4">
         您的浏览器不支持视频标签。
     </video>
